--- a/src/main/resources/templates/accessInfo.html
+++ b/src/main/resources/templates/accessInfo.html
@@ -34,24 +34,46 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 h-100">
-                <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
-                    <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">안녕하세요! </h1>
-                        <hr class="divider" />
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container px-4 px-lg-5">
+                <h2 class="text-center mt-0">접속 정보 확인!</h2>
+                <hr class="divider" />
+                <div class="row gx-4 gx-lg-5">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">당신의 IP는?</h3>
+                            <p class="text-muted mb-0" th:text="${accessInfo.ip}"></p>
+                        </div>
                     </div>
-                    <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Cloud사업담당 TF 과제인 kubeVirt 환경 구현에 참여하신 여러분!!! 나름 부족한 개발 실력이지만, 여러분들과 함께 하나하나 만들어갔으면 합니다. </p>
-                        <a class="btn btn-primary btn-xl" href="accessinfo">접속 정보 확인!</a>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">당신의 OS는?</h3>
+                            <p class="text-muted mb-0" th:text="${accessInfo.os}"></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">접속한 브라우저는?</h3>
+                            <p class="text-muted mb-0" th:text="${accessInfo.browser}"></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">접속한 디바이스는?</h3>
+                            <p class="text-muted mb-0" th:text="${accessInfo.device}"></p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
+        </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2025 - KT DS</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2025 - KT DS </div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
